gym-tool/gym-tool-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csro-gym-tool
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: csro-gym-tool
  replicas: 2 # tells deployment to run 1 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: csro-gym-tool
    spec:
      containers:
      - name: csro-gym-tool
        image: gym-tool:csro-latest
        ports:
        - containerPort: 8080
