gym-tool/gym-tool-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csro-gym-tool-db
spec:
  ports:
  - port: 3306
  selector:
    app: csro-gym-tool-mysql
  clusterIP: None
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: csro-gym-tool-mysql
spec:
  selector:
    matchLabels:
      app: csro-gym-tool-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: csro-gym-tool-mysql
    spec:
      containers:
      - image: mysql:5.6
        name: csro-gym-tool-mysql
        ports:
        - containerPort: 3306
          name: csro-gym-tool-mysql
        volumeMounts:
        - name: csro-gym-tool-mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: csro-gym-tool-mysql-persistent-storage
        persistentVolumeClaim:
          claimName: csro-gym-tool-mysql-pvc
