gym-tool/gym-tool-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csro-gym-tool
  labels:
    app: csro-gym-tool
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: csro-gym-tool
  selector:
    app: csro-gym-tool
