gym-tool/gym-tool-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: csro-gym-tool-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  tls:
    - hosts:
      - curso.minikube.io
      secretName: curso-minikube-secret
  rules:
  - host: curso.minikube.io
    http:
      paths:
      - path: /home/
        backend:
          serviceName: csro-gym-tool
          servicePort: 8080
